# glusterfs

./: .gitignore  configure.ac  glusterfs.spec.in
cli/src/: cli-cmd-parser.c  cli-cmd-volume.c  cli-cmd.c  cli-rpc-ops.c  cli.h
libglusterfs/src/: glfs-message-id.h  libglusterfs-messages.h  options.c
rpc/rpc-lib/src/: protocol-common.h
rpc/rpc-transport/rdma/src/: rdma.c
rpc/xdr/src/: cli1-xdr.x
xlators/debug/sink/src/: sink.c
xlators/features/: Makefile.am
xlators/features/vscan/src/: Makefile.am  vscan-mem-types.h  vscan-messages.h  vscan.c  vscan.h
xlators/features/vscan/src/clamav/: clamav.c  clamav.h
xlators/features/vscan/src/stub/: stub.c  stub.h
xlators/mgmt/glusterd/src/: Makefile.am  glusterd-handler.c  glusterd-messages.h  glusterd-op-sm.c  glusterd-rpc-ops.c  glusterd-svc-helper.c  glusterd-svc-mgmt.c  glusterd-utils.c  glusterd-utils.h  glusterd-volgen.c  glusterd-volgen.h  glusterd-volume-set.c  glusterd-vscan.c  glusterd-vscand-svc.c  glusterd-vscand-svc.h  glusterd.c  glusterd.h
